// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Buttons Buttons 1`] = `
<div
  className="preview__StoriesWrapper-sc-1cm7iba-0 ckUDMq"
>
  <button
    className="buttoncomponent__Button-sc-1gnonws-0 vIrPC"
    style={
      Object {
        "marginRight": 10,
      }
    }
  >
    Default
  </button>
  <button
    className="buttoncomponent__Button-sc-1gnonws-0 ksa-DYb"
    disabled={true}
    style={
      Object {
        "marginRight": 10,
      }
    }
  >
    Disabled
  </button>
  <button
    className="buttoncomponent__Button-sc-1gnonws-0 jthmJk"
    style={
      Object {
        "marginRight": 10,
      }
    }
  >
    Loading
  </button>
</div>
`;

exports[`Storyshots Chat Info Chat Info 1`] = `
<div
  className="preview__StoriesWrapper-sc-1cm7iba-0 ckUDMq"
>
  <div
    className="chat-infocomponent__Wrapper-sc-ichvm3-0 hvGUvb"
  >
    <div
      className="chat-infocomponent__Content-sc-ichvm3-1 jcfHhO"
    >
      <div
        className="chat-infocomponent__ChatImage-sc-ichvm3-2 iQzrMP"
        src="https://chat-profile-images.s3.amazonaws.com/file_70280.jpg"
      />
      <div
        className="chat-infocomponent__Title-sc-ichvm3-3 hBvwxJ"
      >
        Kabold сamp
        <div
          className="chat-infocomponent__Subtitle-sc-ichvm3-4 bGiWXS"
        >
          The kaboldest camp
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Chat Info Edge Case Chat Info 1`] = `
<div
  className="preview__StoriesWrapper-sc-1cm7iba-0 ckUDMq"
>
  <div
    className="chat-infocomponent__Wrapper-sc-ichvm3-0 hvGUvb"
  >
    <div
      className="chat-infocomponent__Content-sc-ichvm3-1 jcfHhO"
    >
      <div
        className="chat-infocomponent__ChatImage-sc-ichvm3-2 sjixB"
        src="/favicon.png"
      />
      <div
        className="chat-infocomponent__Title-sc-ichvm3-3 hBvwxJ"
      >
        Unknown Chat
        <div
          className="chat-infocomponent__Subtitle-sc-ichvm3-4 bGiWXS"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Graphs Bar Chart 1`] = `
<div
  className="preview__StoriesWrapper-sc-1cm7iba-0 ckUDMq"
>
  <div
    className="daily-users-piecomponent__ChartWrapper-sc-guyatk-0 dzJxVN"
  >
    <div
      className="recharts-responsive-container"
      style={
        Object {
          "height": 400,
          "maxHeight": undefined,
          "minHeight": undefined,
          "minWidth": undefined,
          "width": "100%",
        }
      }
    />
    <div
      className="daily-users-piecomponent__Legend-sc-guyatk-1 lhLPxP"
    >
      <div
        className="daily-users-piecomponent__LegendItem-sc-guyatk-2 kAIDyE"
      >
        <div
          className="daily-users-piecomponent__LegendCell-sc-guyatk-3 ghoZeX"
          color="#1f77b4"
        />
        <div
          className="daily-users-piecomponent__LegendText-sc-guyatk-4 ehAFUJ"
        >
          user1  (62)
        </div>
      </div>
      <div
        className="daily-users-piecomponent__LegendItem-sc-guyatk-2 kAIDyE"
      >
        <div
          className="daily-users-piecomponent__LegendCell-sc-guyatk-3 fEsdie"
          color="#ff7f0e"
        />
        <div
          className="daily-users-piecomponent__LegendText-sc-guyatk-4 ehAFUJ"
        >
          user2  (52)
        </div>
      </div>
      <div
        className="daily-users-piecomponent__LegendItem-sc-guyatk-2 kAIDyE"
      >
        <div
          className="daily-users-piecomponent__LegendCell-sc-guyatk-3 clUwfD"
          color="#2ca02c"
        />
        <div
          className="daily-users-piecomponent__LegendText-sc-guyatk-4 ehAFUJ"
        >
          user3  (30)
        </div>
      </div>
      <div
        className="daily-users-piecomponent__LegendItem-sc-guyatk-2 kAIDyE"
      >
        <div
          className="daily-users-piecomponent__LegendCell-sc-guyatk-3 jMUQlr"
          color="#d62728"
        />
        <div
          className="daily-users-piecomponent__LegendText-sc-guyatk-4 ehAFUJ"
        >
          user4  (27)
        </div>
      </div>
      <div
        className="daily-users-piecomponent__LegendItem-sc-guyatk-2 kAIDyE"
      >
        <div
          className="daily-users-piecomponent__LegendCell-sc-guyatk-3 dkavQc"
          color="#9467bd"
        />
        <div
          className="daily-users-piecomponent__LegendText-sc-guyatk-4 ehAFUJ"
        >
          user5  (16)
        </div>
      </div>
      <div
        className="daily-users-piecomponent__LegendItem-sc-guyatk-2 kAIDyE"
      >
        <div
          className="daily-users-piecomponent__LegendCell-sc-guyatk-3 jPhpqU"
          color="#8c564b"
        />
        <div
          className="daily-users-piecomponent__LegendText-sc-guyatk-4 ehAFUJ"
        >
          user6  (10)
        </div>
      </div>
      <div
        className="daily-users-piecomponent__LegendItem-sc-guyatk-2 kAIDyE"
      >
        <div
          className="daily-users-piecomponent__LegendCell-sc-guyatk-3 hHowmh"
          color="#e377c2"
        />
        <div
          className="daily-users-piecomponent__LegendText-sc-guyatk-4 ehAFUJ"
        >
          user7  (9)
        </div>
      </div>
      <div
        className="daily-users-piecomponent__LegendItem-sc-guyatk-2 kAIDyE"
      >
        <div
          className="daily-users-piecomponent__LegendCell-sc-guyatk-3 bZZvtv"
          color="#7f7f7f"
        />
        <div
          className="daily-users-piecomponent__LegendText-sc-guyatk-4 ehAFUJ"
        >
          user8  (5)
        </div>
      </div>
      <div
        className="daily-users-piecomponent__LegendItem-sc-guyatk-2 kAIDyE"
      >
        <div
          className="daily-users-piecomponent__LegendCell-sc-guyatk-3 djnDPt"
          color="#bcbd22"
        />
        <div
          className="daily-users-piecomponent__LegendText-sc-guyatk-4 ehAFUJ"
        >
          user9  (3)
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Graphs Pie Chart 1`] = `
<div
  className="preview__StoriesWrapper-sc-1cm7iba-0 ckUDMq"
>
  <div
    className="daily-users-barscomponent__ChartWrapper-sc-wi252y-0 dpPfKf"
  >
    <div
      className="recharts-responsive-container"
      style={
        Object {
          "height": "100%",
          "maxHeight": undefined,
          "minHeight": undefined,
          "minWidth": undefined,
          "width": "100%",
        }
      }
    />
  </div>
</div>
`;

exports[`Storyshots Input Icon Input 1`] = `
<div
  className="preview__StoriesWrapper-sc-1cm7iba-0 ckUDMq"
>
  <div
    className="sc-0-Inputstories__Story-sc-15acmoi-0 hZniqx"
  >
    <div>
      <div
        className="inputcomponent__Holder-sc-1hahqlg-0 hHzSZc"
      >
        <input
          className="inputcomponent__BaseInput-sc-1hahqlg-2 iOpxau"
          value="Simple input"
        />
        <div
          className="inputcomponent__Icon-sc-1hahqlg-1 jaYJBf"
        >
          <svg
            fill="none"
            height={24}
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            viewBox="0 0 24 24"
            width={24}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"
            />
          </svg>
        </div>
      </div>
    </div>
    <div>
      <div
        className="inputcomponent__Holder-sc-1hahqlg-0 hHzSZc"
      >
        <input
          className="inputcomponent__BaseInput-sc-1hahqlg-2 iOpxau"
          value="Emoji 🦄"
        />
        <div
          className="inputcomponent__Icon-sc-1hahqlg-1 jaYJBf"
        >
          🐈
        </div>
      </div>
    </div>
    <div>
      <div
        className="inputcomponent__Holder-sc-1hahqlg-0 hHzSZc"
      >
        <input
          className="inputcomponent__BaseInput-sc-1hahqlg-2 gPbVVK"
          style={
            Object {
              "width": 215,
            }
          }
          value="123,43"
        />
        <div
          className="inputcomponent__Icon-sc-1hahqlg-1 jaYJBf"
        >
          $
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Input Simple Input 1`] = `
<div
  className="preview__StoriesWrapper-sc-1cm7iba-0 ckUDMq"
>
  <div
    className="inputcomponent__Holder-sc-1hahqlg-0 hHzSZc"
  >
    <input
      className="inputcomponent__BaseInput-sc-1hahqlg-2 dLqNyQ"
      value="Simple input"
    />
  </div>
</div>
`;

exports[`Storyshots Spinners Spinners 1`] = `
<div
  className="preview__StoriesWrapper-sc-1cm7iba-0 ckUDMq"
>
  <svg
    aria-label="spinner"
    className="spinnercomponent__Svg-sc-962b50-0 drKBHC"
    style={
      Object {
        "height": 50,
        "width": 50,
      }
    }
    viewBox="25 25 50 50"
  >
    <circle
      className="spinnercomponent__Circle-sc-962b50-1 FUhay"
      cx="50"
      cy="50"
      fill="none"
      r="20"
      strokeMiterlimit="10"
      strokeWidth={2}
    />
  </svg>
  <svg
    aria-label="spinner"
    className="spinnercomponent__Svg-sc-962b50-0 drKBHC"
    style={
      Object {
        "height": 105,
        "width": 105,
      }
    }
    viewBox="25 25 50 50"
  >
    <circle
      className="spinnercomponent__Circle-sc-962b50-1 FUhay"
      cx="50"
      cy="50"
      fill="none"
      r="20"
      strokeMiterlimit="10"
      strokeWidth={2}
    />
  </svg>
  <svg
    aria-label="spinner"
    className="spinnercomponent__Svg-sc-962b50-0 drKBHC"
    style={
      Object {
        "height": 50,
        "width": 50,
      }
    }
    viewBox="25 25 50 50"
  >
    <circle
      className="spinnercomponent__Circle-sc-962b50-1 ljLyDp"
      color="red"
      cx="50"
      cy="50"
      fill="none"
      r="20"
      strokeMiterlimit="10"
      strokeWidth={2}
    />
  </svg>
  <svg
    aria-label="spinner"
    className="spinnercomponent__Svg-sc-962b50-0 drKBHC"
    style={
      Object {
        "height": 100,
        "width": 100,
      }
    }
    viewBox="25 25 50 50"
  >
    <circle
      className="spinnercomponent__Circle-sc-962b50-1 gLrtZV"
      color="green"
      cx="50"
      cy="50"
      fill="none"
      r="20"
      strokeMiterlimit="10"
      strokeWidth={2}
    />
  </svg>
</div>
`;

exports[`Storyshots Tabs Simple Tabs 1`] = `
<div
  className="preview__StoriesWrapper-sc-1cm7iba-0 ckUDMq"
>
  <div
    className="sc-1-Tabsstories__Wrapper-sc-1xyi268-0 cjzRIi"
  >
    <div
      className="tabscomponent__Wrapper-sc-11o22cv-0 dFAhbB"
    >
      <div
        className="tabscomponent__Inner-sc-11o22cv-1 hfbabu"
      >
        <div
          className="tabscomponent__Tab-sc-11o22cv-2 fyiRqh tab active"
          onClick={[Function]}
        >
          Tab1
        </div>
        <div
          className="tabscomponent__Tab-sc-11o22cv-2 fyiRqh tab"
          onClick={[Function]}
        >
          Veeeeeery Loooooong Name Tab
        </div>
        <div
          className="tabscomponent__Tab-sc-11o22cv-2 fyiRqh tab"
          onClick={[Function]}
        >
          Some other tab
        </div>
        <div
          className="tabscomponent__Tab-sc-11o22cv-2 fyiRqh tab"
          onClick={[Function]}
        >
          tab 4
        </div>
        <div
          className="tabscomponent__TabIndicator-sc-11o22cv-3 ljerRW"
          tabIndex={0}
          width={0}
          x={0}
        />
      </div>
    </div>
    <div
      className="sc-1-Tabsstories__Content-sc-1xyi268-1 bzsttp"
    >
      selected 
      Tab1
       tab!
    </div>
  </div>
</div>
`;
